infra/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cyber-vault-dev
  labels:
    name: cyber-vault-dev
    environment: development
    security-level: high
